// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App matches snapshot 1`] = `
<div>
  <div
    class="container flex flex-col items-center mx-auto mb-28"
    data-testid="manage-group-layout"
  >
    <div
      class="navbar bg-base-100 fixed top-0 z-99"
    >
      <div
        class="dropdown justify-start min-w-12"
      >
        <div
          aria-label="Navigation menu"
          class="btn btn-ghost btn-circle size-12"
          role="button"
          tabindex="0"
          title="Navigation menu"
        >
          <svg
            class="size-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 6h16M4 12h16M4 18h7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <ul
          class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-3"
          tabindex="0"
        >
          <li>
            <a
              href="/"
            >
              <svg
                class="size-4 mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
                />
              </svg>
              Overview
            </a>
          </li>
          <li>
            <a
              href="/accounts/profile/"
            >
              <svg
                class="size-4 mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"
                />
              </svg>
              User profile
            </a>
          </li>
          <li>
            <button>
              <svg
                class="size-4 mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 160c-52.9 0-96 43.1-96 96s43.1 96 96 96 96-43.1 96-96-43.1-96-96-96zm246.4 80.5l-94.7-47.3 33.5-100.4c4.5-13.6-8.4-26.5-21.9-21.9l-100.4 33.5-47.4-94.8c-6.4-12.8-24.6-12.8-31 0l-47.3 94.7L92.7 70.8c-13.6-4.5-26.5 8.4-21.9 21.9l33.5 100.4-94.7 47.4c-12.8 6.4-12.8 24.6 0 31l94.7 47.3-33.5 100.5c-4.5 13.6 8.4 26.5 21.9 21.9l100.4-33.5 47.3 94.7c6.4 12.8 24.6 12.8 31 0l47.3-94.7 100.4 33.5c13.6 4.5 26.5-8.4 21.9-21.9l-33.5-100.4 94.7-47.3c13-6.5 13-24.7.2-31.1zm-155.9 106c-49.9 49.9-131.1 49.9-181 0-49.9-49.9-49.9-131.1 0-181 49.9-49.9 131.1-49.9 181 0 49.9 49.9 49.9 131.1 0 181z"
                />
              </svg>
              Light mode
            </button>
          </li>
        </ul>
      </div>
      <div
        class="mx-auto shrink min-w-0"
        data-title-click-listener=""
      >
        <div
          class="dropdown dropdown-center w-full"
        >
          <a
            class="w-full px-0 text-nowrap font-semibold btn btn-ghost border-0"
            role="button"
            tabindex="0"
          >
            <span
              class="px-4 leading-[2.75rem] truncate"
              style="font-size: 14px;"
            >
              Test group
            </span>
          </a>
        </div>
      </div>
      <div
        class="justify-end min-w-12"
      >
        <button
          aria-label="Open QR scanner"
          class="btn btn-ghost btn-circle size-12"
          title="Open QR scanner"
        >
          <svg
            class="size-6"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 7V5a2 2 0 0 1 2-2h2"
            />
            <path
              d="M17 3h2a2 2 0 0 1 2 2v2"
            />
            <path
              d="M21 17v2a2 2 0 0 1-2 2h-2"
            />
            <path
              d="M7 21H5a2 2 0 0 1-2-2v-2"
            />
            <circle
              cx="12"
              cy="12"
              r="3"
            />
            <path
              d="m16 16-1.9-1.9"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="title-drawer"
      data-testid="title-drawer"
    >
      <div
        class="title-drawer-contents"
      >
        <div
          class="divider font-bold"
        >
          Details
        </div>
        <div
          class="min-w-full"
        >
          <div
            class="grid grid-cols-min-max gap-2"
          >
            <span
              class="text-left font-bold break-keep"
            >
              Created:
            </span>
            <span
              class="text-left line-clamp-1 break-all"
            >
              December 25, 2023
            </span>
            <span
              class="text-left font-bold break-keep"
            >
              Location:
            </span>
            <span
              class="text-left line-clamp-1 break-all"
            >
              Middle shelf
            </span>
          </div>
        </div>
        <button
          class="btn h-8 mt-4 w-full"
        >
          Edit Details
        </button>
        <button
          class="btn h-8 mt-4 w-full"
        >
          Change QR Code
        </button>
      </div>
    </div>
    <div
      class="flex flex-col items-center transition-[height] duration-300 h-[14.25rem]"
    >
      <div
        aria-orientation="horizontal"
        class="tab-group my-2 w-64"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="tab-option whitespace-nowrap tab-option-selected"
          data-headlessui-state="selected"
          id="headlessui-tabs-tab-:r0:"
          role="tab"
          tabindex="0"
          type="button"
        >
          All plants
        </button>
        <button
          aria-selected="false"
          class="tab-option whitespace-nowrap"
          data-headlessui-state=""
          id="headlessui-tabs-tab-:r1:"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Select plants
        </button>
      </div>
      <input
        aria-label="Timestamp input"
        class="input my-2 text-center"
        step="1"
        type="datetime-local"
        value="2024-03-01T12:00:00"
      />
      <div
        class="flex mb-8"
      >
        <button
          class="btn btn-info m-2"
        >
          Water
        </button>
        <button
          class="btn btn-success m-2"
        >
          Fertilize
        </button>
      </div>
    </div>
    <div
      class="px-4 relative"
    >
      <div
        class="section"
      >
        <div
          class="section-header"
        >
          <div
            class="flex min-h-[3.75rem] dropdown dropdown-center"
          >
            <div
              class="section-title btn btn-ghost cursor-pointer"
              role="button"
              tabindex="0"
            >
              Plants (3)
            </div>
            <div
              class="dropdown-content z-50 mt-14"
            >
              <ul
                class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box"
                tabindex="0"
              >
                <li>
                  <a
                    class="flex justify-center"
                    data-testid="add_plants_option"
                  >
                    Add
                  </a>
                </li>
                <li>
                  <a
                    class="flex justify-center"
                    data-testid="remove_plants_option"
                  >
                    Remove
                  </a>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="flex px-4 mb-4"
          >
            <div
              class="relative w-full"
            >
              <input
                class="input w-full text-center indent-[3.625rem] pr-[4.5rem]"
                placeholder="filter"
                type="text"
                value=""
              />
              <div
                class="absolute flex top-2 right-2"
              >
                <div
                  class="dropdown dropdown-center"
                >
                  <div
                    aria-label="Sort menu"
                    class="btn-close size-8"
                    role="button"
                    tabindex="0"
                    title="Sort menu"
                  >
                    <svg
                      aria-hidden="true"
                      class="size-5 m-auto"
                      data-slot="icon"
                      fill="currentColor"
                      viewBox="0 0 16 16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M13.78 10.47a.75.75 0 0 1 0 1.06l-2.25 2.25a.75.75 0 0 1-1.06 0l-2.25-2.25a.75.75 0 1 1 1.06-1.06l.97.97V5.75a.75.75 0 0 1 1.5 0v5.69l.97-.97a.75.75 0 0 1 1.06 0ZM2.22 5.53a.75.75 0 0 1 0-1.06l2.25-2.25a.75.75 0 0 1 1.06 0l2.25 2.25a.75.75 0 0 1-1.06 1.06l-.97-.97v5.69a.75.75 0 0 1-1.5 0V4.56l-.97.97a.75.75 0 0 1-1.06 0Z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                  <ul
                    class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-2 scroll-mb-4"
                    tabindex="0"
                  >
                    <li>
                      <a
                        aria-label="Sort by Added (reverse alphabetical)'"
                      >
                        <svg
                          class="transition-transform duration-200 mr-2 rotate-0"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 384 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M169.4 502.6c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 402.7 224 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 370.7L86.6 329.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128z"
                          />
                        </svg>
                        Added
                      </a>
                    </li>
                    <li>
                      <a
                        aria-label="Sort by Name (alphabetical)"
                      >
                        <div
                          class="w-[14px] mr-2"
                        />
                        Name
                      </a>
                    </li>
                    <li>
                      <a
                        aria-label="Sort by Species (alphabetical)"
                      >
                        <div
                          class="w-[14px] mr-2"
                        />
                        Species
                      </a>
                    </li>
                    <li>
                      <a
                        aria-label="Sort by Watered (alphabetical)"
                      >
                        <div
                          class="w-[14px] mr-2"
                        />
                        Watered
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="section-content"
        >
          <div
            class="flex flex-col gap-4"
          >
            <div
              class="flex relative"
            >
              <div
                class="absolute flex h-full z-0"
              >
                <div
                  aria-checked="false"
                  class="radio my-auto"
                />
              </div>
              <div
                class="w-full overflow-hidden transition-all duration-300 ml-0"
              >
                <a
                  aria-label="Go to Test Plant page"
                  class="collapse cursor-pointer group rounded-2xl bg-neutral text-neutral-content"
                  href="/manage/0640ec3b-1bed-4b15-a078-d6e7ec66be12"
                >
                  <input
                    class="hidden pointer-events-none"
                    type="checkbox"
                  />
                  <div
                    class="collapse-title min-size-0"
                  >
                    <div
                      class="card card-side relative h-24"
                    >
                      <div
                        class="card-body max-w-full my-auto text-center"
                      >
                        <h2
                          class="card-title line-clamp-1 break-words text-center px-8"
                        >
                          Test Plant
                        </h2>
                        <span
                          class="line-clamp-1"
                          title="04:45 AM - February 29, 2024"
                        >
                          <svg
                            class="fa-inline mr-2 text-info"
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 384 512"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M192 512C86 512 0 426 0 320C0 228.8 130.2 57.7 166.6 11.7C172.6 4.2 181.5 0 191.1 0l1.8 0c9.6 0 18.5 4.2 24.5 11.7C253.8 57.7 384 228.8 384 320c0 106-86 192-192 192zM96 336c0-8.8-7.2-16-16-16s-16 7.2-16 16c0 61.9 50.1 112 112 112c8.8 0 16-7.2 16-16s-7.2-16-16-16c-44.2 0-80-35.8-80-80z"
                            />
                          </svg>
                          Yesterday
                        </span>
                      </div>
                      <button
                        aria-label="Show or hide details"
                        class="btn-close absolute right-2 top-8 z-40"
                        tabindex="-1"
                      >
                        <svg
                          aria-hidden="true"
                          class="min-size-8 transition-transform duration-200 rotate-0 group-has-checked:rotate-180"
                          data-slot="icon"
                          fill="currentColor"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06Z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <div
                    class="collapse-content min-w-0"
                  >
                    <div
                      class="pt-4"
                    >
                      <div
                        class="grid grid-cols-min-max gap-2"
                      >
                        <span
                          class="text-left font-bold break-keep"
                        >
                          Created:
                        </span>
                        <span
                          class="text-left line-clamp-1 break-all"
                        >
                          December 25, 2023
                        </span>
                        <span
                          class="text-left font-bold break-keep"
                        >
                          Species:
                        </span>
                        <span
                          class="text-left line-clamp-1 break-all"
                        >
                          Calathea
                        </span>
                        <span
                          class="text-left font-bold break-keep"
                        >
                          Pot size:
                        </span>
                        <span
                          class="text-left line-clamp-1 break-all"
                        >
                          4
                        </span>
                      </div>
                      <p
                        class="text-left mt-2 line-clamp-6 break-anywhere pl-2 -indent-2"
                      >
                        <span
                          class="font-bold mr-2"
                        >
                          Description:
                        </span>
                        <span>
                          This is a plant with a long description with
                        </span>
                      </p>
                    </div>
                  </div>
                </a>
              </div>
            </div>
            <div
              class="flex relative"
            >
              <div
                class="absolute flex h-full z-0"
              >
                <div
                  aria-checked="false"
                  class="radio my-auto"
                />
              </div>
              <div
                class="w-full overflow-hidden transition-all duration-300 ml-0"
              >
                <a
                  aria-label="Go to Unnamed Spider Plant page"
                  class="collapse cursor-pointer group rounded-2xl bg-neutral text-neutral-content grayscale"
                  href="/manage/19f65fa0-1c75-4cba-b590-0c9b5b315fcc"
                >
                  <input
                    class="hidden pointer-events-none"
                    type="checkbox"
                  />
                  <div
                    class="collapse-title min-size-0"
                  >
                    <div
                      class="card card-side relative h-24"
                    >
                      <figure
                        class="h-24 w-20 min-size-20"
                      >
                        <img
                          alt="Unnamed Spider Plant photo"
                          class="size-full object-cover"
                          draggable="false"
                          loading="lazy"
                          src="/media/thumbnails/photo_thumb.webp"
                        />
                      </figure>
                      <div
                        class="card-body max-w-full my-auto text-start"
                      >
                        <h2
                          class="card-title line-clamp-1 break-words pr-8"
                        >
                          Unnamed Spider Plant
                        </h2>
                        <span
                          class="line-clamp-1"
                          title="04:45 AM - February 29, 2024"
                        >
                          <svg
                            class="fa-inline mr-2 text-info"
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 384 512"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M192 512C86 512 0 426 0 320C0 228.8 130.2 57.7 166.6 11.7C172.6 4.2 181.5 0 191.1 0l1.8 0c9.6 0 18.5 4.2 24.5 11.7C253.8 57.7 384 228.8 384 320c0 106-86 192-192 192zM96 336c0-8.8-7.2-16-16-16s-16 7.2-16 16c0 61.9 50.1 112 112 112c8.8 0 16-7.2 16-16s-7.2-16-16-16c-44.2 0-80-35.8-80-80z"
                            />
                          </svg>
                          Yesterday
                        </span>
                      </div>
                      <button
                        aria-label="Show or hide details"
                        class="btn-close absolute right-2 top-8 z-40"
                        tabindex="-1"
                      >
                        <svg
                          aria-hidden="true"
                          class="min-size-8 transition-transform duration-200 rotate-0 group-has-checked:rotate-180"
                          data-slot="icon"
                          fill="currentColor"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06Z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <div
                    class="collapse-content min-w-0"
                  >
                    <div
                      class="pt-4"
                    >
                      <div
                        class="grid grid-cols-min-max gap-2"
                      >
                        <span
                          class="text-left font-bold break-keep"
                        >
                          Created:
                        </span>
                        <span
                          class="text-left line-clamp-1 break-all"
                        >
                          December 26, 2023
                        </span>
                        <span
                          class="text-left font-bold break-keep"
                        >
                          Species:
                        </span>
                        <span
                          class="text-left line-clamp-1 break-all"
                        >
                          Spider Plant
                        </span>
                        <span
                          class="text-left font-bold break-keep"
                        >
                          Pot size:
                        </span>
                        <span
                          class="text-left line-clamp-1 break-all"
                        >
                          2
                        </span>
                      </div>
                    </div>
                  </div>
                </a>
              </div>
            </div>
            <div
              class="flex relative"
            >
              <div
                class="absolute flex h-full z-0"
              >
                <div
                  aria-checked="false"
                  class="radio my-auto"
                />
              </div>
              <div
                class="w-full overflow-hidden transition-all duration-300 ml-0"
              >
                <a
                  aria-label="Go to Newest plant page"
                  class="collapse cursor-pointer group rounded-2xl bg-neutral text-neutral-content"
                  href="/manage/26a9fc1f-ef04-4b0f-82ca-f14133fa3b16"
                >
                  <input
                    class="hidden pointer-events-none"
                    type="checkbox"
                  />
                  <div
                    class="collapse-title min-size-0"
                  >
                    <div
                      class="card card-side relative h-24"
                    >
                      <div
                        class="card-body max-w-full my-auto text-center"
                      >
                        <h2
                          class="card-title line-clamp-1 break-words text-center px-8"
                        >
                          Newest plant
                        </h2>
                        <span>
                          Never watered
                        </span>
                      </div>
                      <button
                        aria-label="Show or hide details"
                        class="btn-close absolute right-2 top-8 z-40"
                        tabindex="-1"
                      >
                        <svg
                          aria-hidden="true"
                          class="min-size-8 transition-transform duration-200 rotate-0 group-has-checked:rotate-180"
                          data-slot="icon"
                          fill="currentColor"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06Z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <div
                    class="collapse-content min-w-0"
                  >
                    <div
                      class="pt-4"
                    >
                      <div
                        class="grid grid-cols-min-max gap-2"
                      >
                        <span
                          class="text-left font-bold break-keep"
                        >
                          Created:
                        </span>
                        <span
                          class="text-left line-clamp-1 break-all"
                        >
                          December 27, 2023
                        </span>
                        <span
                          class="text-left font-bold break-keep"
                        >
                          Species:
                        </span>
                        <span
                          class="text-left line-clamp-1 break-all"
                        >
                          null
                        </span>
                      </div>
                    </div>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="floating-footer floating-footer-hidden"
      data-testid="add-events-footer"
    >
      <div
        class="relative flex flex-col items-center gap-4 w-full"
      >
        <button
          aria-label="Stop adding events"
          class="absolute -top-2 -right-2 btn-close size-6"
          data-testid="close-add-events-footer"
          style="--btn-bg: color-mix(in oklab,var(--color-base-content)20%,#0000);"
        >
          <svg
            aria-hidden="true"
            class="size-5"
            data-slot="icon"
            fill="currentColor"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94 5.28 4.22Z"
            />
          </svg>
        </button>
        <div
          class="w-70 md:w-82 text-sm md:text-base select-none text-center text-base-content font-semibold transition-opacity duration-150 ease opacity-100 duration-200"
        >
          Select plants to add events
        </div>
        <div
          class="flex flex-row justify-center gap-8"
        >
          <button
            aria-label="Water selected plants"
            class="btn btn-square btn-info"
            data-testid="water-button"
          >
            <svg
              class="size-5 text-neutral"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 384 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M192 512C86 512 0 426 0 320C0 228.8 130.2 57.7 166.6 11.7C172.6 4.2 181.5 0 191.1 0l1.8 0c9.6 0 18.5 4.2 24.5 11.7C253.8 57.7 384 228.8 384 320c0 106-86 192-192 192zM96 336c0-8.8-7.2-16-16-16s-16 7.2-16 16c0 61.9 50.1 112 112 112c8.8 0 16-7.2 16-16s-7.2-16-16-16c-44.2 0-80-35.8-80-80z"
              />
            </svg>
          </button>
          <button
            aria-label="Fertilize selected plants"
            class="btn btn-square btn-success"
            data-testid="fertilize-button"
          >
            <svg
              class="size-5 text-neutral"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M512 32c0 113.6-84.6 207.5-194.2 222c-7.1-53.4-30.6-101.6-65.3-139.3C290.8 46.3 364 0 448 0l32 0c17.7 0 32 14.3 32 32zM0 96C0 78.3 14.3 64 32 64l32 0c123.7 0 224 100.3 224 224l0 32 0 160c0 17.7-14.3 32-32 32s-32-14.3-32-32l0-160C100.3 320 0 219.7 0 96z"
              />
            </svg>
          </button>
          <button
            aria-label="Prune selected plants"
            class="btn btn-square btn-prune"
            data-testid="prune-button"
          >
            <svg
              class="size-5 text-neutral"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 192l-39.5-39.5c4.9-12.6 7.5-26.2 7.5-40.5C224 50.1 173.9 0 112 0S0 50.1 0 112s50.1 112 112 112c14.3 0 27.9-2.7 40.5-7.5L192 256l-39.5 39.5c-12.6-4.9-26.2-7.5-40.5-7.5C50.1 288 0 338.1 0 400s50.1 112 112 112s112-50.1 112-112c0-14.3-2.7-27.9-7.5-40.5L499.2 76.8c7.1-7.1 7.1-18.5 0-25.6c-28.3-28.3-74.1-28.3-102.4 0L256 192zm22.6 150.6L396.8 460.8c28.3 28.3 74.1 28.3 102.4 0c7.1-7.1 7.1-18.5 0-25.6L342.6 278.6l-64 64zM64 112a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm48 240a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="floating-footer floating-footer-hidden"
      data-testid="remove-plants-footer"
    >
      <div
        class="relative flex flex-col items-center gap-4 w-full"
      >
        <div
          class="w-70 md:w-82 text-sm md:text-base select-none text-center text-base-content font-semibold transition-opacity duration-150 ease opacity-100 duration-200"
        >
          Select plants to remove
        </div>
        <div
          class="flex flex-row justify-center gap-8"
        >
          <button
            class="btn btn-neutral w-22"
          >
            Cancel
          </button>
          <button
            class="btn btn-error"
          >
            Remove
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App matches snapshot when group is archived 1`] = `
<div>
  <div
    class="container flex flex-col items-center mx-auto mb-28"
    data-testid="manage-group-layout"
  >
    <div
      class="navbar bg-base-100 fixed top-0 z-99"
    >
      <div
        class="dropdown justify-start min-w-12"
      >
        <div
          aria-label="Navigation menu"
          class="btn btn-ghost btn-circle size-12"
          role="button"
          tabindex="0"
          title="Navigation menu"
        >
          <svg
            class="size-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 6h16M4 12h16M4 18h7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <ul
          class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-3"
          tabindex="0"
        >
          <li>
            <a
              href="/"
            >
              <svg
                class="size-4 mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
                />
              </svg>
              Overview
            </a>
          </li>
          <li>
            <a
              href="/accounts/profile/"
            >
              <svg
                class="size-4 mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"
                />
              </svg>
              User profile
            </a>
          </li>
          <li>
            <button>
              <svg
                class="size-4 mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 160c-52.9 0-96 43.1-96 96s43.1 96 96 96 96-43.1 96-96-43.1-96-96-96zm246.4 80.5l-94.7-47.3 33.5-100.4c4.5-13.6-8.4-26.5-21.9-21.9l-100.4 33.5-47.4-94.8c-6.4-12.8-24.6-12.8-31 0l-47.3 94.7L92.7 70.8c-13.6-4.5-26.5 8.4-21.9 21.9l33.5 100.4-94.7 47.4c-12.8 6.4-12.8 24.6 0 31l94.7 47.3-33.5 100.5c-4.5 13.6 8.4 26.5 21.9 21.9l100.4-33.5 47.3 94.7c6.4 12.8 24.6 12.8 31 0l47.3-94.7 100.4 33.5c13.6 4.5 26.5-8.4 21.9-21.9l-33.5-100.4 94.7-47.3c13-6.5 13-24.7.2-31.1zm-155.9 106c-49.9 49.9-131.1 49.9-181 0-49.9-49.9-49.9-131.1 0-181 49.9-49.9 131.1-49.9 181 0 49.9 49.9 49.9 131.1 0 181z"
                />
              </svg>
              Light mode
            </button>
          </li>
        </ul>
      </div>
      <div
        class="mx-auto shrink min-w-0"
        data-title-click-listener=""
      >
        <div
          class="dropdown dropdown-center w-full"
        >
          <a
            class="w-full px-0 text-nowrap font-semibold btn btn-ghost border-0"
            role="button"
            tabindex="0"
          >
            <span
              class="px-4 leading-[2.75rem] truncate"
              style="font-size: 14px;"
            >
              Test group
            </span>
          </a>
        </div>
      </div>
      <div
        class="justify-end min-w-12"
      >
        <button
          aria-label="Open QR scanner"
          class="btn btn-ghost btn-circle size-12"
          title="Open QR scanner"
        >
          <svg
            class="size-6"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 7V5a2 2 0 0 1 2-2h2"
            />
            <path
              d="M17 3h2a2 2 0 0 1 2 2v2"
            />
            <path
              d="M21 17v2a2 2 0 0 1-2 2h-2"
            />
            <path
              d="M7 21H5a2 2 0 0 1-2-2v-2"
            />
            <circle
              cx="12"
              cy="12"
              r="3"
            />
            <path
              d="m16 16-1.9-1.9"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="title-drawer"
      data-testid="title-drawer"
    >
      <div
        class="title-drawer-contents"
      >
        <div
          class="divider font-bold"
        >
          Details
        </div>
        <div
          class="min-w-full"
        >
          <div
            class="grid grid-cols-min-max gap-2"
          >
            <span
              class="text-left font-bold break-keep"
            >
              Created:
            </span>
            <span
              class="text-left line-clamp-1 break-all"
            >
              December 25, 2023
            </span>
            <span
              class="text-left font-bold break-keep"
            >
              Location:
            </span>
            <span
              class="text-left line-clamp-1 break-all"
            >
              Middle shelf
            </span>
          </div>
        </div>
        <button
          class="btn h-8 mt-4 w-full"
        >
          Edit Details
        </button>
        <button
          class="btn h-8 mt-4 w-full"
        >
          Change QR Code
        </button>
      </div>
    </div>
    <div
      class="text-center text-xl mb-8"
    >
      Group Archived
    </div>
    <div
      class="px-4 relative"
    >
      <div
        class="section"
      >
        <div
          class="section-header"
        >
          <div
            class="flex min-h-[3.75rem] dropdown dropdown-center"
          >
            <div
              class="section-title btn btn-ghost cursor-pointer"
              role="button"
              tabindex="0"
            >
              Plants (3)
            </div>
            <div
              class="dropdown-content z-50 mt-14"
            >
              <ul
                class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box"
                tabindex="0"
              >
                <li>
                  <a
                    class="flex justify-center"
                    data-testid="add_plants_option"
                  >
                    Add
                  </a>
                </li>
                <li>
                  <a
                    class="flex justify-center"
                    data-testid="remove_plants_option"
                  >
                    Remove
                  </a>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="flex px-4 mb-4"
          >
            <div
              class="relative w-full"
            >
              <input
                class="input w-full text-center indent-[3.625rem] pr-[4.5rem]"
                placeholder="filter"
                type="text"
                value=""
              />
              <div
                class="absolute flex top-2 right-2"
              >
                <div
                  class="dropdown dropdown-center"
                >
                  <div
                    aria-label="Sort menu"
                    class="btn-close size-8"
                    role="button"
                    tabindex="0"
                    title="Sort menu"
                  >
                    <svg
                      aria-hidden="true"
                      class="size-5 m-auto"
                      data-slot="icon"
                      fill="currentColor"
                      viewBox="0 0 16 16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M13.78 10.47a.75.75 0 0 1 0 1.06l-2.25 2.25a.75.75 0 0 1-1.06 0l-2.25-2.25a.75.75 0 1 1 1.06-1.06l.97.97V5.75a.75.75 0 0 1 1.5 0v5.69l.97-.97a.75.75 0 0 1 1.06 0ZM2.22 5.53a.75.75 0 0 1 0-1.06l2.25-2.25a.75.75 0 0 1 1.06 0l2.25 2.25a.75.75 0 0 1-1.06 1.06l-.97-.97v5.69a.75.75 0 0 1-1.5 0V4.56l-.97.97a.75.75 0 0 1-1.06 0Z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                  <ul
                    class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-2 scroll-mb-4"
                    tabindex="0"
                  >
                    <li>
                      <a
                        aria-label="Sort by Added (reverse alphabetical)'"
                      >
                        <svg
                          class="transition-transform duration-200 mr-2 rotate-0"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 384 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M169.4 502.6c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 402.7 224 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 370.7L86.6 329.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128z"
                          />
                        </svg>
                        Added
                      </a>
                    </li>
                    <li>
                      <a
                        aria-label="Sort by Name (alphabetical)"
                      >
                        <div
                          class="w-[14px] mr-2"
                        />
                        Name
                      </a>
                    </li>
                    <li>
                      <a
                        aria-label="Sort by Species (alphabetical)"
                      >
                        <div
                          class="w-[14px] mr-2"
                        />
                        Species
                      </a>
                    </li>
                    <li>
                      <a
                        aria-label="Sort by Watered (alphabetical)"
                      >
                        <div
                          class="w-[14px] mr-2"
                        />
                        Watered
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="section-content"
        >
          <div
            class="flex flex-col gap-4"
          >
            <div
              class="flex relative"
            >
              <div
                class="absolute flex h-full z-0"
              >
                <div
                  aria-checked="false"
                  class="radio my-auto"
                />
              </div>
              <div
                class="w-full overflow-hidden transition-all duration-300 ml-0"
              >
                <a
                  aria-label="Go to Test Plant page"
                  class="collapse cursor-pointer group rounded-2xl bg-neutral text-neutral-content"
                  href="/manage/0640ec3b-1bed-4b15-a078-d6e7ec66be12"
                >
                  <input
                    class="hidden pointer-events-none"
                    type="checkbox"
                  />
                  <div
                    class="collapse-title min-size-0"
                  >
                    <div
                      class="card card-side relative h-24"
                    >
                      <div
                        class="card-body max-w-full my-auto text-center"
                      >
                        <h2
                          class="card-title line-clamp-1 break-words text-center px-8"
                        >
                          Test Plant
                        </h2>
                        <span
                          class="line-clamp-1"
                          title="04:45 AM - February 29, 2024"
                        >
                          <svg
                            class="fa-inline mr-2 text-info"
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 384 512"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M192 512C86 512 0 426 0 320C0 228.8 130.2 57.7 166.6 11.7C172.6 4.2 181.5 0 191.1 0l1.8 0c9.6 0 18.5 4.2 24.5 11.7C253.8 57.7 384 228.8 384 320c0 106-86 192-192 192zM96 336c0-8.8-7.2-16-16-16s-16 7.2-16 16c0 61.9 50.1 112 112 112c8.8 0 16-7.2 16-16s-7.2-16-16-16c-44.2 0-80-35.8-80-80z"
                            />
                          </svg>
                          Yesterday
                        </span>
                      </div>
                      <button
                        aria-label="Show or hide details"
                        class="btn-close absolute right-2 top-8 z-40"
                        tabindex="-1"
                      >
                        <svg
                          aria-hidden="true"
                          class="min-size-8 transition-transform duration-200 rotate-0 group-has-checked:rotate-180"
                          data-slot="icon"
                          fill="currentColor"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06Z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <div
                    class="collapse-content min-w-0"
                  >
                    <div
                      class="pt-4"
                    >
                      <div
                        class="grid grid-cols-min-max gap-2"
                      >
                        <span
                          class="text-left font-bold break-keep"
                        >
                          Created:
                        </span>
                        <span
                          class="text-left line-clamp-1 break-all"
                        >
                          December 25, 2023
                        </span>
                        <span
                          class="text-left font-bold break-keep"
                        >
                          Species:
                        </span>
                        <span
                          class="text-left line-clamp-1 break-all"
                        >
                          Calathea
                        </span>
                        <span
                          class="text-left font-bold break-keep"
                        >
                          Pot size:
                        </span>
                        <span
                          class="text-left line-clamp-1 break-all"
                        >
                          4
                        </span>
                      </div>
                      <p
                        class="text-left mt-2 line-clamp-6 break-anywhere pl-2 -indent-2"
                      >
                        <span
                          class="font-bold mr-2"
                        >
                          Description:
                        </span>
                        <span>
                          This is a plant with a long description with
                        </span>
                      </p>
                    </div>
                  </div>
                </a>
              </div>
            </div>
            <div
              class="flex relative"
            >
              <div
                class="absolute flex h-full z-0"
              >
                <div
                  aria-checked="false"
                  class="radio my-auto"
                />
              </div>
              <div
                class="w-full overflow-hidden transition-all duration-300 ml-0"
              >
                <a
                  aria-label="Go to Unnamed Spider Plant page"
                  class="collapse cursor-pointer group rounded-2xl bg-neutral text-neutral-content grayscale"
                  href="/manage/19f65fa0-1c75-4cba-b590-0c9b5b315fcc"
                >
                  <input
                    class="hidden pointer-events-none"
                    type="checkbox"
                  />
                  <div
                    class="collapse-title min-size-0"
                  >
                    <div
                      class="card card-side relative h-24"
                    >
                      <figure
                        class="h-24 w-20 min-size-20"
                      >
                        <img
                          alt="Unnamed Spider Plant photo"
                          class="size-full object-cover"
                          draggable="false"
                          loading="lazy"
                          src="/media/thumbnails/photo_thumb.webp"
                        />
                      </figure>
                      <div
                        class="card-body max-w-full my-auto text-start"
                      >
                        <h2
                          class="card-title line-clamp-1 break-words pr-8"
                        >
                          Unnamed Spider Plant
                        </h2>
                        <span
                          class="line-clamp-1"
                          title="04:45 AM - February 29, 2024"
                        >
                          <svg
                            class="fa-inline mr-2 text-info"
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 384 512"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M192 512C86 512 0 426 0 320C0 228.8 130.2 57.7 166.6 11.7C172.6 4.2 181.5 0 191.1 0l1.8 0c9.6 0 18.5 4.2 24.5 11.7C253.8 57.7 384 228.8 384 320c0 106-86 192-192 192zM96 336c0-8.8-7.2-16-16-16s-16 7.2-16 16c0 61.9 50.1 112 112 112c8.8 0 16-7.2 16-16s-7.2-16-16-16c-44.2 0-80-35.8-80-80z"
                            />
                          </svg>
                          Yesterday
                        </span>
                      </div>
                      <button
                        aria-label="Show or hide details"
                        class="btn-close absolute right-2 top-8 z-40"
                        tabindex="-1"
                      >
                        <svg
                          aria-hidden="true"
                          class="min-size-8 transition-transform duration-200 rotate-0 group-has-checked:rotate-180"
                          data-slot="icon"
                          fill="currentColor"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06Z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <div
                    class="collapse-content min-w-0"
                  >
                    <div
                      class="pt-4"
                    >
                      <div
                        class="grid grid-cols-min-max gap-2"
                      >
                        <span
                          class="text-left font-bold break-keep"
                        >
                          Created:
                        </span>
                        <span
                          class="text-left line-clamp-1 break-all"
                        >
                          December 26, 2023
                        </span>
                        <span
                          class="text-left font-bold break-keep"
                        >
                          Species:
                        </span>
                        <span
                          class="text-left line-clamp-1 break-all"
                        >
                          Spider Plant
                        </span>
                        <span
                          class="text-left font-bold break-keep"
                        >
                          Pot size:
                        </span>
                        <span
                          class="text-left line-clamp-1 break-all"
                        >
                          2
                        </span>
                      </div>
                    </div>
                  </div>
                </a>
              </div>
            </div>
            <div
              class="flex relative"
            >
              <div
                class="absolute flex h-full z-0"
              >
                <div
                  aria-checked="false"
                  class="radio my-auto"
                />
              </div>
              <div
                class="w-full overflow-hidden transition-all duration-300 ml-0"
              >
                <a
                  aria-label="Go to Newest plant page"
                  class="collapse cursor-pointer group rounded-2xl bg-neutral text-neutral-content"
                  href="/manage/26a9fc1f-ef04-4b0f-82ca-f14133fa3b16"
                >
                  <input
                    class="hidden pointer-events-none"
                    type="checkbox"
                  />
                  <div
                    class="collapse-title min-size-0"
                  >
                    <div
                      class="card card-side relative h-24"
                    >
                      <div
                        class="card-body max-w-full my-auto text-center"
                      >
                        <h2
                          class="card-title line-clamp-1 break-words text-center px-8"
                        >
                          Newest plant
                        </h2>
                        <span>
                          Never watered
                        </span>
                      </div>
                      <button
                        aria-label="Show or hide details"
                        class="btn-close absolute right-2 top-8 z-40"
                        tabindex="-1"
                      >
                        <svg
                          aria-hidden="true"
                          class="min-size-8 transition-transform duration-200 rotate-0 group-has-checked:rotate-180"
                          data-slot="icon"
                          fill="currentColor"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06Z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <div
                    class="collapse-content min-w-0"
                  >
                    <div
                      class="pt-4"
                    >
                      <div
                        class="grid grid-cols-min-max gap-2"
                      >
                        <span
                          class="text-left font-bold break-keep"
                        >
                          Created:
                        </span>
                        <span
                          class="text-left line-clamp-1 break-all"
                        >
                          December 27, 2023
                        </span>
                        <span
                          class="text-left font-bold break-keep"
                        >
                          Species:
                        </span>
                        <span
                          class="text-left line-clamp-1 break-all"
                        >
                          null
                        </span>
                      </div>
                    </div>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="floating-footer floating-footer-hidden"
      data-testid="add-events-footer"
    >
      <div
        class="relative flex flex-col items-center gap-4 w-full"
      >
        <button
          aria-label="Stop adding events"
          class="absolute -top-2 -right-2 btn-close size-6"
          data-testid="close-add-events-footer"
          style="--btn-bg: color-mix(in oklab,var(--color-base-content)20%,#0000);"
        >
          <svg
            aria-hidden="true"
            class="size-5"
            data-slot="icon"
            fill="currentColor"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94 5.28 4.22Z"
            />
          </svg>
        </button>
        <div
          class="w-70 md:w-82 text-sm md:text-base select-none text-center text-base-content font-semibold transition-opacity duration-150 ease opacity-100 duration-200"
        >
          Select plants to add events
        </div>
        <div
          class="flex flex-row justify-center gap-8"
        >
          <button
            aria-label="Water selected plants"
            class="btn btn-square btn-info"
            data-testid="water-button"
          >
            <svg
              class="size-5 text-neutral"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 384 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M192 512C86 512 0 426 0 320C0 228.8 130.2 57.7 166.6 11.7C172.6 4.2 181.5 0 191.1 0l1.8 0c9.6 0 18.5 4.2 24.5 11.7C253.8 57.7 384 228.8 384 320c0 106-86 192-192 192zM96 336c0-8.8-7.2-16-16-16s-16 7.2-16 16c0 61.9 50.1 112 112 112c8.8 0 16-7.2 16-16s-7.2-16-16-16c-44.2 0-80-35.8-80-80z"
              />
            </svg>
          </button>
          <button
            aria-label="Fertilize selected plants"
            class="btn btn-square btn-success"
            data-testid="fertilize-button"
          >
            <svg
              class="size-5 text-neutral"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M512 32c0 113.6-84.6 207.5-194.2 222c-7.1-53.4-30.6-101.6-65.3-139.3C290.8 46.3 364 0 448 0l32 0c17.7 0 32 14.3 32 32zM0 96C0 78.3 14.3 64 32 64l32 0c123.7 0 224 100.3 224 224l0 32 0 160c0 17.7-14.3 32-32 32s-32-14.3-32-32l0-160C100.3 320 0 219.7 0 96z"
              />
            </svg>
          </button>
          <button
            aria-label="Prune selected plants"
            class="btn btn-square btn-prune"
            data-testid="prune-button"
          >
            <svg
              class="size-5 text-neutral"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 192l-39.5-39.5c4.9-12.6 7.5-26.2 7.5-40.5C224 50.1 173.9 0 112 0S0 50.1 0 112s50.1 112 112 112c14.3 0 27.9-2.7 40.5-7.5L192 256l-39.5 39.5c-12.6-4.9-26.2-7.5-40.5-7.5C50.1 288 0 338.1 0 400s50.1 112 112 112s112-50.1 112-112c0-14.3-2.7-27.9-7.5-40.5L499.2 76.8c7.1-7.1 7.1-18.5 0-25.6c-28.3-28.3-74.1-28.3-102.4 0L256 192zm22.6 150.6L396.8 460.8c28.3 28.3 74.1 28.3 102.4 0c7.1-7.1 7.1-18.5 0-25.6L342.6 278.6l-64 64zM64 112a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm48 240a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="floating-footer floating-footer-hidden"
      data-testid="remove-plants-footer"
    >
      <div
        class="relative flex flex-col items-center gap-4 w-full"
      >
        <div
          class="w-70 md:w-82 text-sm md:text-base select-none text-center text-base-content font-semibold transition-opacity duration-150 ease opacity-100 duration-200"
        >
          Select plants to remove
        </div>
        <div
          class="flex flex-row justify-center gap-8"
        >
          <button
            class="btn btn-neutral w-22"
          >
            Cancel
          </button>
          <button
            class="btn btn-error"
          >
            Remove
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App matches snapshot when no plants 1`] = `
<div>
  <div
    class="container flex flex-col items-center mx-auto mb-28"
    data-testid="manage-group-layout"
  >
    <div
      class="navbar bg-base-100 fixed top-0 z-99"
    >
      <div
        class="dropdown justify-start min-w-12"
      >
        <div
          aria-label="Navigation menu"
          class="btn btn-ghost btn-circle size-12"
          role="button"
          tabindex="0"
          title="Navigation menu"
        >
          <svg
            class="size-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 6h16M4 12h16M4 18h7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <ul
          class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-3"
          tabindex="0"
        >
          <li>
            <a
              href="/"
            >
              <svg
                class="size-4 mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
                />
              </svg>
              Overview
            </a>
          </li>
          <li>
            <a
              href="/accounts/profile/"
            >
              <svg
                class="size-4 mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"
                />
              </svg>
              User profile
            </a>
          </li>
          <li>
            <button>
              <svg
                class="size-4 mr-2"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 160c-52.9 0-96 43.1-96 96s43.1 96 96 96 96-43.1 96-96-43.1-96-96-96zm246.4 80.5l-94.7-47.3 33.5-100.4c4.5-13.6-8.4-26.5-21.9-21.9l-100.4 33.5-47.4-94.8c-6.4-12.8-24.6-12.8-31 0l-47.3 94.7L92.7 70.8c-13.6-4.5-26.5 8.4-21.9 21.9l33.5 100.4-94.7 47.4c-12.8 6.4-12.8 24.6 0 31l94.7 47.3-33.5 100.5c-4.5 13.6 8.4 26.5 21.9 21.9l100.4-33.5 47.3 94.7c6.4 12.8 24.6 12.8 31 0l47.3-94.7 100.4 33.5c13.6 4.5 26.5-8.4 21.9-21.9l-33.5-100.4 94.7-47.3c13-6.5 13-24.7.2-31.1zm-155.9 106c-49.9 49.9-131.1 49.9-181 0-49.9-49.9-49.9-131.1 0-181 49.9-49.9 131.1-49.9 181 0 49.9 49.9 49.9 131.1 0 181z"
                />
              </svg>
              Light mode
            </button>
          </li>
        </ul>
      </div>
      <div
        class="mx-auto shrink min-w-0"
        data-title-click-listener=""
      >
        <div
          class="dropdown dropdown-center w-full"
        >
          <a
            class="w-full px-0 text-nowrap font-semibold btn btn-ghost border-0"
            role="button"
            tabindex="0"
          >
            <span
              class="px-4 leading-[2.75rem] truncate"
              style="font-size: 14px;"
            >
              Test group
            </span>
          </a>
        </div>
      </div>
      <div
        class="justify-end min-w-12"
      >
        <button
          aria-label="Open QR scanner"
          class="btn btn-ghost btn-circle size-12"
          title="Open QR scanner"
        >
          <svg
            class="size-6"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 7V5a2 2 0 0 1 2-2h2"
            />
            <path
              d="M17 3h2a2 2 0 0 1 2 2v2"
            />
            <path
              d="M21 17v2a2 2 0 0 1-2 2h-2"
            />
            <path
              d="M7 21H5a2 2 0 0 1-2-2v-2"
            />
            <circle
              cx="12"
              cy="12"
              r="3"
            />
            <path
              d="m16 16-1.9-1.9"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="title-drawer"
      data-testid="title-drawer"
    >
      <div
        class="title-drawer-contents"
      >
        <div
          class="divider font-bold"
        >
          Details
        </div>
        <div
          class="min-w-full"
        >
          <div
            class="grid grid-cols-min-max gap-2"
          >
            <span
              class="text-left font-bold break-keep"
            >
              Created:
            </span>
            <span
              class="text-left line-clamp-1 break-all"
            >
              December 25, 2023
            </span>
            <span
              class="text-left font-bold break-keep"
            >
              Location:
            </span>
            <span
              class="text-left line-clamp-1 break-all"
            >
              Middle shelf
            </span>
          </div>
        </div>
        <button
          class="btn h-8 mt-4 w-full"
        >
          Edit Details
        </button>
        <button
          class="btn h-8 mt-4 w-full"
        >
          Change QR Code
        </button>
      </div>
    </div>
    <div
      class="flex flex-col items-center transition-[height] duration-300 h-0"
    >
      <div
        aria-orientation="horizontal"
        class="tab-group my-2 w-64"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="tab-option whitespace-nowrap tab-option-selected"
          data-headlessui-state="selected"
          id="headlessui-tabs-tab-:r2:"
          role="tab"
          tabindex="0"
          type="button"
        >
          All plants
        </button>
        <button
          aria-selected="false"
          class="tab-option whitespace-nowrap"
          data-headlessui-state=""
          id="headlessui-tabs-tab-:r3:"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Select plants
        </button>
      </div>
      <input
        aria-label="Timestamp input"
        class="input my-2 text-center"
        step="1"
        type="datetime-local"
        value="2024-03-01T12:00:00"
      />
      <div
        class="flex mb-8"
      >
        <button
          class="btn btn-info m-2"
        >
          Water
        </button>
        <button
          class="btn btn-success m-2"
        >
          Fertilize
        </button>
      </div>
    </div>
    <div
      class="px-4 relative"
    >
      <div
        class="section"
      >
        <div
          class="section-header"
        >
          <div
            class="flex min-h-[3.75rem]"
          >
            <div
              class="section-title btn btn-ghost cursor-pointer"
              role="button"
              tabindex="0"
            >
              Plants (0)
            </div>
            <div
              class="dropdown-content z-50 mt-14"
            />
          </div>
          <div
            class="flex px-4 mb-4"
          >
            <div
              class="relative w-full"
            >
              <input
                class="input w-full text-center indent-[3.625rem] pr-[4.5rem]"
                placeholder="filter"
                type="text"
                value=""
              />
              <div
                class="absolute flex top-2 right-2"
              >
                <div
                  class="dropdown dropdown-center"
                >
                  <div
                    aria-label="Sort menu"
                    class="btn-close size-8"
                    role="button"
                    tabindex="0"
                    title="Sort menu"
                  >
                    <svg
                      aria-hidden="true"
                      class="size-5 m-auto"
                      data-slot="icon"
                      fill="currentColor"
                      viewBox="0 0 16 16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M13.78 10.47a.75.75 0 0 1 0 1.06l-2.25 2.25a.75.75 0 0 1-1.06 0l-2.25-2.25a.75.75 0 1 1 1.06-1.06l.97.97V5.75a.75.75 0 0 1 1.5 0v5.69l.97-.97a.75.75 0 0 1 1.06 0ZM2.22 5.53a.75.75 0 0 1 0-1.06l2.25-2.25a.75.75 0 0 1 1.06 0l2.25 2.25a.75.75 0 0 1-1.06 1.06l-.97-.97v5.69a.75.75 0 0 1-1.5 0V4.56l-.97.97a.75.75 0 0 1-1.06 0Z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                  <ul
                    class="dropdown-content menu z-90 shadow-sm bg-base-300 rounded-box mt-2 scroll-mb-4"
                    tabindex="0"
                  >
                    <li>
                      <a
                        aria-label="Sort by Added (reverse alphabetical)'"
                      >
                        <svg
                          class="transition-transform duration-200 mr-2 rotate-0"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 384 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M169.4 502.6c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 402.7 224 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 370.7L86.6 329.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128z"
                          />
                        </svg>
                        Added
                      </a>
                    </li>
                    <li>
                      <a
                        aria-label="Sort by Name (alphabetical)"
                      >
                        <div
                          class="w-[14px] mr-2"
                        />
                        Name
                      </a>
                    </li>
                    <li>
                      <a
                        aria-label="Sort by Species (alphabetical)"
                      >
                        <div
                          class="w-[14px] mr-2"
                        />
                        Species
                      </a>
                    </li>
                    <li>
                      <a
                        aria-label="Sort by Watered (alphabetical)"
                      >
                        <div
                          class="w-[14px] mr-2"
                        />
                        Watered
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="section-content"
        >
          <div
            class="flex flex-col gap-4"
          />
          <span
            class="text-center font-semibold my-2"
          >
            No plants!
          </span>
          <button
            class="btn btn-accent mx-auto mt-4"
            data-testid="add_plants_button"
          >
            <svg
              class="size-5 mr-1"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 144L48 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l144 0 0 144c0 17.7 14.3 32 32 32s32-14.3 32-32l0-144 144 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-144 0 0-144z"
              />
            </svg>
             Add plants
          </button>
        </div>
      </div>
    </div>
    <div
      class="floating-footer floating-footer-hidden"
      data-testid="add-events-footer"
    >
      <div
        class="relative flex flex-col items-center gap-4 w-full"
      >
        <button
          aria-label="Stop adding events"
          class="absolute -top-2 -right-2 btn-close size-6"
          data-testid="close-add-events-footer"
          style="--btn-bg: color-mix(in oklab,var(--color-base-content)20%,#0000);"
        >
          <svg
            aria-hidden="true"
            class="size-5"
            data-slot="icon"
            fill="currentColor"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94 5.28 4.22Z"
            />
          </svg>
        </button>
        <div
          class="w-70 md:w-82 text-sm md:text-base select-none text-center text-base-content font-semibold transition-opacity duration-150 ease opacity-100 duration-200"
        >
          Select plants to add events
        </div>
        <div
          class="flex flex-row justify-center gap-8"
        >
          <button
            aria-label="Water selected plants"
            class="btn btn-square btn-info"
            data-testid="water-button"
          >
            <svg
              class="size-5 text-neutral"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 384 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M192 512C86 512 0 426 0 320C0 228.8 130.2 57.7 166.6 11.7C172.6 4.2 181.5 0 191.1 0l1.8 0c9.6 0 18.5 4.2 24.5 11.7C253.8 57.7 384 228.8 384 320c0 106-86 192-192 192zM96 336c0-8.8-7.2-16-16-16s-16 7.2-16 16c0 61.9 50.1 112 112 112c8.8 0 16-7.2 16-16s-7.2-16-16-16c-44.2 0-80-35.8-80-80z"
              />
            </svg>
          </button>
          <button
            aria-label="Fertilize selected plants"
            class="btn btn-square btn-success"
            data-testid="fertilize-button"
          >
            <svg
              class="size-5 text-neutral"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M512 32c0 113.6-84.6 207.5-194.2 222c-7.1-53.4-30.6-101.6-65.3-139.3C290.8 46.3 364 0 448 0l32 0c17.7 0 32 14.3 32 32zM0 96C0 78.3 14.3 64 32 64l32 0c123.7 0 224 100.3 224 224l0 32 0 160c0 17.7-14.3 32-32 32s-32-14.3-32-32l0-160C100.3 320 0 219.7 0 96z"
              />
            </svg>
          </button>
          <button
            aria-label="Prune selected plants"
            class="btn btn-square btn-prune"
            data-testid="prune-button"
          >
            <svg
              class="size-5 text-neutral"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 192l-39.5-39.5c4.9-12.6 7.5-26.2 7.5-40.5C224 50.1 173.9 0 112 0S0 50.1 0 112s50.1 112 112 112c14.3 0 27.9-2.7 40.5-7.5L192 256l-39.5 39.5c-12.6-4.9-26.2-7.5-40.5-7.5C50.1 288 0 338.1 0 400s50.1 112 112 112s112-50.1 112-112c0-14.3-2.7-27.9-7.5-40.5L499.2 76.8c7.1-7.1 7.1-18.5 0-25.6c-28.3-28.3-74.1-28.3-102.4 0L256 192zm22.6 150.6L396.8 460.8c28.3 28.3 74.1 28.3 102.4 0c7.1-7.1 7.1-18.5 0-25.6L342.6 278.6l-64 64zM64 112a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm48 240a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="floating-footer floating-footer-hidden"
      data-testid="remove-plants-footer"
    >
      <div
        class="relative flex flex-col items-center gap-4 w-full"
      >
        <div
          class="w-70 md:w-82 text-sm md:text-base select-none text-center text-base-content font-semibold transition-opacity duration-150 ease opacity-100 duration-200"
        >
          Select plants to remove
        </div>
        <div
          class="flex flex-row justify-center gap-8"
        >
          <button
            class="btn btn-neutral w-22"
          >
            Cancel
          </button>
          <button
            class="btn btn-error"
          >
            Remove
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
